[#59]: Fix bug with z-index

--- a/source/less/le-player.less
+++ b/source/less/le-player.less
@@ -341,13 +341,13 @@
 		top: -2px;
 		//transition: left @timeline-transition;
 		width: 2px;
-		z-index: @z-index-base + 6;
+		z-index: @z-index-base + 7;
 		&.shadow
 		{
 			background: @color-marker-shadow;
 			border-right: 1px solid @color-marker-shadow-border;
 			transition: none;
-			z-index: @z-index-base + 5;
+			z-index: @z-index-base + 6;
 		}
 		.time
 		{
